@@ -90,6 +90,7 @@ WriteMakefile(
 		'LWP::Protocol::https' => 0,
 		'Object::Configure' => 0,
 		'Params::Get' => 0.13,
+		'Params::Validate::Strict' => 0,
 		'Return::Set' => 0,
 		'Scalar::Util' => 0,
 		'Time::HiRes' => 0,
