@@ -4,6 +4,7 @@ Revision history for Weather::Meteo
 	Use Object::Configure to allow runtime configuration
 	Remove magic numbers
 	Added test dashboard
+	Validate the argument given to ua()
 
 0.12	Mon Feb 24 07:44:44 EST 2025
 	Corrected the documentation for tz
